--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Rant</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my blog</h1>
+    <h1>Rant</h1>
     <p>The propose of this blog is to hashout the issues I have been facing ?</p>
 </body>
 </html>
