--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Rant</h1>
-    <p>The propose of this blog is to hashout the issues I have been facing ?</p>
+    <p>Nah, its all chill.</p>
 </body>
 </html>
